--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.22.2",
     "zustand": "^4.5.2"
